--- a/css/output.css
+++ b/css/output.css
@@ -1402,7 +1402,7 @@ video {
 
 h2 {
   
-  color: white;
+  color: #4a6cf7;
   font-size: 12px;
   text-align: center; /* Center the text horizontally */
   font-family: 'Roboto', sans-serif;
